Update path users.json